[tool.poetry]
name = "causalprob"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.7"
jax = "^0.2.25"
optax = "^0.0.9"
    
[tool.poetry.dev-dependencies]

matplotlib = "*"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
